Fix under-invalidation of paint properties about mask

Bug: 728913
Change-Id: I8ecaff077cc303d1cf3b646a2e7bab3b680acf7e
Reviewed-on: https://chromium-review.googlesource.com/666334
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502073}
Former-commit-id: 276e67482194dc33eaeaa84b4de7a411afe9e7e1