third_party/WebKit/Source/core/paint/PaintPropertyTreeUpdateTests.cpp
@@ -825,4 +825,158 @@ TEST_P(PaintPropertyTreeUpdateTest, MenuListControlClipChange) {
             select->FirstFragment()->PaintProperties()->OverflowClip());
 }
 
+TEST_P(PaintPropertyTreeUpdateTest, BoxAddRemoveMask) {
+  SetBodyInnerHTML(
+      "<style>#target {width: 100px; height: 100px}</style>"
+      "<div id='target'>"
+      "  <div style='width:500px; height:500px; background:green;'></div>"
+      "</div>");
+
+  EXPECT_EQ(nullptr, PaintPropertiesForElement("target"));
+
+  auto* target = GetDocument().getElementById("target");
+  target->setAttribute(HTMLNames::styleAttr,
+                       "-webkit-mask: linear-gradient(red, blue)");
+  GetDocument().View()->UpdateAllLifecyclePhases();
+
+  const auto* properties = PaintPropertiesForElement("target");
+  ASSERT_NE(nullptr, properties);
+  EXPECT_NE(nullptr, properties->Effect());
+  EXPECT_NE(nullptr, properties->Mask());
+  const auto* mask_clip = properties->MaskClip();
+  ASSERT_NE(nullptr, mask_clip);
+  EXPECT_EQ(FloatRoundedRect(8, 8, 100, 100), mask_clip->ClipRect());
+
+  target->setAttribute(HTMLNames::styleAttr, "");
+  GetDocument().View()->UpdateAllLifecyclePhases();
+  EXPECT_EQ(nullptr, PaintPropertiesForElement("target"));
+}
+
+TEST_P(PaintPropertyTreeUpdateTest, MaskClipNodeBoxSizeChange) {
+  SetBodyInnerHTML(
+      "<style>"
+      "#target {"
+      "  width: 100px;"
+      "  height: 100px;"
+      "  -webkit-mask: linear-gradient(red, blue);"
+      "}"
+      "</style>"
+      "<div id='target'>"
+      "  <div style='width:500px; height:500px; background:green;'></div>"
+      "</div>");
+
+  const auto* properties = PaintPropertiesForElement("target");
+  ASSERT_NE(nullptr, properties);
+  const auto* mask_clip = properties->MaskClip();
+  ASSERT_NE(nullptr, mask_clip);
+  EXPECT_EQ(FloatRoundedRect(8, 8, 100, 100), mask_clip->ClipRect());
+
+  GetDocument().getElementById("target")->setAttribute(HTMLNames::styleAttr,
+                                                       "height: 200px");
+  GetDocument().View()->UpdateAllLifecyclePhases();
+
+  ASSERT_EQ(mask_clip, properties->MaskClip());
+  EXPECT_EQ(FloatRoundedRect(8, 8, 100, 200), mask_clip->ClipRect());
+}
+
+TEST_P(PaintPropertyTreeUpdateTest, InlineAddRemoveMask) {
+  SetBodyInnerHTML(
+      "<span id='target'><img id='img' style='width: 50px'></span>");
+
+  EXPECT_EQ(nullptr, PaintPropertiesForElement("target"));
+
+  auto* target = GetDocument().getElementById("target");
+  target->setAttribute(HTMLNames::styleAttr,
+                       "-webkit-mask: linear-gradient(red, blue)");
+  GetDocument().View()->UpdateAllLifecyclePhases();
+
+  const auto* properties = PaintPropertiesForElement("target");
+  ASSERT_NE(nullptr, properties);
+  EXPECT_NE(nullptr, properties->Effect());
+  EXPECT_NE(nullptr, properties->Mask());
+  const auto* mask_clip = properties->MaskClip();
+  ASSERT_NE(nullptr, mask_clip);
+  EXPECT_EQ(50, mask_clip->ClipRect().Rect().Width());
+
+  target->setAttribute(HTMLNames::styleAttr, "");
+  GetDocument().View()->UpdateAllLifecyclePhases();
+  EXPECT_EQ(nullptr, PaintPropertiesForElement("target"));
+}
+
+TEST_P(PaintPropertyTreeUpdateTest, MaskClipNodeInlineBoundsChange) {
+  SetBodyInnerHTML(
+      "<span id='target' style='-webkit-mask: linear-gradient(red, blue)'>"
+      "  <img id='img' style='width: 50px'>"
+      "</span>");
+
+  const auto* properties = PaintPropertiesForElement("target");
+  ASSERT_NE(nullptr, properties);
+  const auto* mask_clip = properties->MaskClip();
+  ASSERT_NE(nullptr, mask_clip);
+  EXPECT_EQ(50, mask_clip->ClipRect().Rect().Width());
+
+  GetDocument().getElementById("img")->setAttribute(HTMLNames::styleAttr,
+                                                    "width: 100px");
+  GetDocument().View()->UpdateAllLifecyclePhases();
+
+  ASSERT_EQ(mask_clip, properties->MaskClip());
+  EXPECT_EQ(100, mask_clip->ClipRect().Rect().Width());
+}
+
+TEST_P(PaintPropertyTreeUpdateTest, AddRemoveSVGMask) {
+  SetBodyInnerHTML(
+      "<svg width='200' height='200'>"
+      "  <rect id='rect' x='0' y='100' width='100' height='100' fill='blue'/>"
+      "  <defs>"
+      "    <mask id='mask' x='0' y='0' width='100' height='200'>"
+      "      <rect width='100' height='200' fill='red'/>"
+      "    </mask>"
+      "  </defs>"
+      "</svg>");
+
+  EXPECT_EQ(nullptr, PaintPropertiesForElement("rect"));
+
+  GetDocument().getElementById("rect")->setAttribute("mask", "url(#mask)");
+  GetDocument().View()->UpdateAllLifecyclePhases();
+  const auto* properties = PaintPropertiesForElement("rect");
+  ASSERT_NE(nullptr, properties);
+  EXPECT_NE(nullptr, properties->Effect());
+  EXPECT_NE(nullptr, properties->Mask());
+  const auto* mask_clip = properties->MaskClip();
+  ASSERT_NE(nullptr, mask_clip);
+  EXPECT_EQ(FloatRoundedRect(0, 100, 100, 100), mask_clip->ClipRect());
+
+  GetDocument().getElementById("rect")->removeAttribute("mask");
+  GetDocument().View()->UpdateAllLifecyclePhases();
+  EXPECT_EQ(nullptr, PaintPropertiesForElement("rect"));
+}
+
+TEST_P(PaintPropertyTreeUpdateTest, SVGMaskTargetBoundsChange) {
+  SetBodyInnerHTML(
+      "<svg width='500' height='500'>"
+      "  <g id='target' mask='url(#mask)'>"
+      "    <rect id='rect' x='0' y='50' width='50' height='100' fill='blue'/>"
+      "  </g>"
+      "  <defs>"
+      "    <mask id='mask' x='0' y='0' width='100' height='200'>"
+      "      <rect width='100' height='200' fill='red'/>"
+      "    </mask>"
+      "  </defs>"
+      "</svg>");
+
+  const auto* properties = PaintPropertiesForElement("target");
+  ASSERT_NE(nullptr, properties);
+  EXPECT_NE(nullptr, properties->Effect());
+  EXPECT_NE(nullptr, properties->Mask());
+  const auto* mask_clip = properties->MaskClip();
+  ASSERT_NE(nullptr, mask_clip);
+  EXPECT_EQ(FloatRoundedRect(0, 50, 50, 100), mask_clip->ClipRect());
+
+  GetDocument().getElementById("rect")->setAttribute("width", "200");
+  GetDocument().View()->UpdateAllLifecyclePhases();
+  EXPECT_NE(nullptr, properties->Effect());
+  EXPECT_NE(nullptr, properties->Mask());
+  EXPECT_EQ(FloatRoundedRect(0, 50, 200, 100), mask_clip->ClipRect());
+}
+
 }  // namespace blink
